Wed Dec 22 11:42:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.mpc:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.h:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.mpc:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.h:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/descriptors/Plan.cdp:
          Rewritten, using the generated executor code.

        * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/descriptors/run_test.pl:
          Given the application some extra time to run

Tue Dec 21 14:52:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Removed implementation of register_type and unregister_type
          since they're pure virtual.

Tue Dec 21 14:21:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Receiver/I2C_Shapes_Receiver.cpp:
        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Sender/I2C_Shapes_Sender.cpp:
          Using the IDL defined type specific datareader/datawriter.

Tue Dec 21 13:43:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
          register_type and unregister_type are now pure virtual.

Tue Dec 21 13:33:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/tests/GetComp/Sender/GetComp_Sender_exec.cpp:
          Resolve compile error on windows.

Tue Dec 21 13:29:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.cpp:
          Resolved compile error.

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Base/I2C_ShapeType.idl: