@@ -45,7 +45,7 @@ DDS_Write_T<CCM_TYPE, TYPED_WRITER, VALUE_TYPE, SEQ_VALUE_TYPE>::configuration_c
               ::DDS::DataWriterListener::_nil (),
               0);
         }
-        else
+      else
         {
           ::DDS::DataWriterQos dwqos;
           dwv_tmp = publisher->create_datawriter (
@@ -53,7 +53,7 @@ DDS_Write_T<CCM_TYPE, TYPED_WRITER, VALUE_TYPE, SEQ_VALUE_TYPE>::configuration_c
               dwqos,
               ::DDS::DataWriterListener::_nil (),
               0);
-          }
+        }
       if (::CORBA::is_nil (dwv_tmp.in ()))
         {
           DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_DDS_NIL_RETURN, (LM_ERROR, DDS4CCM_INFO
