@@ -65,7 +65,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
   void
   Component_exec_i::ccm_activate (void)
   {
-    typedef ::CIAO::NDDS::DDS_DataWriter_Base DataWriter_type;
+   typedef ::CIAO::NDDS::DDS_DataWriter_Base DataWriter_type;
     try
       {
         ::DDS::DataWriter_var dw1 =
@@ -82,22 +82,32 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
 
         if (ccm_dw1)
           {
-            DataWriter_type * typed_ccm_dw =
-              dynamic_cast <DataWriter_type *> (ccm_dw1->get_dds_entity ());
-            if (typed_ccm_dw)
+            ::DDS::DataWriter_var tmp = ccm_dw1->get_dds_entity ();
+            if (! ::CORBA::is_nil (tmp.in ()))
               {
-                DDSDataWriter * dds_dw1 = typed_ccm_dw->get_rti_entity ();
-                DDSPublisher * dds_p1 = dds_dw1->get_publisher ();
-                this->dds_dp1_ = dds_p1->get_participant ();
+                DataWriter_type * typed_ccm_dw =
+                  dynamic_cast <DataWriter_type *> (tmp.in ());
+                if (typed_ccm_dw)
+                  {
+                    DDSDataWriter * dds_dw1 = typed_ccm_dw->get_rti_entity ();
+                    DDSPublisher * dds_p1 = dds_dw1->get_publisher ();
+                    this->dds_dp1_ = dds_p1->get_participant ();
 
-                DDSTopicDescription * td1 =
-                  this->dds_dp1_->lookup_topicdescription (tp_name_conn_1_);
-                this->dds_tp1_ = DDSTopic::narrow (td1);
+                    DDSTopicDescription * td1 =
+                      this->dds_dp1_->lookup_topicdescription (tp_name_conn_1_);
+                    this->dds_tp1_ = DDSTopic::narrow (td1);
+                  }
+                else
+                  {
+                    ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
+                                "Error casting DataWriter 1 to typed DataWriter 1\n"));
+                    throw ::CORBA::INTERNAL ();
+                  }
               }
             else
               {
-                ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
-                            "Error casting DataWriter 1 to typed DataWriter 1\n"));
+                ACE_ERROR ((LM_ERROR, "ERROR : Receiver_exec_i::ccm_activate - "
+                            "Error getting DDS DataWriter 1.\n"));
                 throw ::CORBA::INTERNAL ();
               }
           }
@@ -129,22 +139,32 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
 
         if (ccm_dw2)
           {
-            DataWriter_type * typed_ccm_dw =
-              dynamic_cast <DataWriter_type *> (ccm_dw2->get_dds_entity ());
-            if (typed_ccm_dw)
+            ::DDS::DataWriter_var tmp = ccm_dw2->get_dds_entity ();
+            if (! ::CORBA::is_nil (tmp.in ()))
               {
-                DDSDataWriter * dds_dw2 = typed_ccm_dw->get_rti_entity ();
-                DDSPublisher * dds_p2 = dds_dw2->get_publisher ();
-                this->dds_dp2_ = dds_p2->get_participant ();
+                DataWriter_type * typed_ccm_dw =
+                  dynamic_cast <DataWriter_type *> (tmp.in ());
+                if (typed_ccm_dw)
+                  {
+                    DDSDataWriter * dds_dw2 = typed_ccm_dw->get_rti_entity ();
+                    DDSPublisher * dds_p2 = dds_dw2->get_publisher ();
+                    this->dds_dp2_ = dds_p2->get_participant ();
 
-                DDSTopicDescription * td2 =
-                  this->dds_dp2_->lookup_topicdescription (tp_name_conn_2_);
-                this->dds_tp2_ = DDSTopic::narrow (td2);
+                    DDSTopicDescription * td2 =
+                      this->dds_dp2_->lookup_topicdescription (tp_name_conn_2_);
+                    this->dds_tp2_ = DDSTopic::narrow (td2);
+                  }
+                else
+                  {
+                    ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
+                                "Error casting DataWriter 2 to typed DataWriter 2\n"));
+                    throw ::CORBA::INTERNAL ();
+                  }
               }
             else
               {
-                ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
-                            "Error casting DataWriter 2 to typed DataWriter 2\n"));
+                ACE_ERROR ((LM_ERROR, "ERROR : Receiver_exec_i::ccm_activate - "
+                            "Error getting DDS DataWriter 2.\n"));
                 throw ::CORBA::INTERNAL ();
               }
           }
@@ -177,22 +197,32 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
 
         if (ccm_dw3)
           {
-            DataWriter_type * typed_ccm_dw =
-              dynamic_cast <DataWriter_type *> (ccm_dw3->get_dds_entity ());
-            if (typed_ccm_dw)
+            ::DDS::DataWriter_var tmp = ccm_dw3->get_dds_entity ();
+            if (! ::CORBA::is_nil (tmp.in ()))
               {
-                DDSDataWriter * dds_dw3 = typed_ccm_dw->get_rti_entity ();
-                DDSPublisher * dds_p3 = dds_dw3->get_publisher ();
-                this->dds_dp3_ = dds_p3->get_participant ();
+                DataWriter_type * typed_ccm_dw =
+                  dynamic_cast <DataWriter_type *> (tmp.in ());
+                if (typed_ccm_dw)
+                  {
+                    DDSDataWriter * dds_dw3 = typed_ccm_dw->get_rti_entity ();
+                    DDSPublisher * dds_p3 = dds_dw3->get_publisher ();
+                    this->dds_dp3_ = dds_p3->get_participant ();
 
-                DDSTopicDescription * td3 =
-                  this->dds_dp3_->lookup_topicdescription (tp_name_conn_3_);
-                this->dds_tp3_ = DDSTopic::narrow (td3);
+                    DDSTopicDescription * td3 =
+                      this->dds_dp3_->lookup_topicdescription (tp_name_conn_3_);
+                    this->dds_tp3_ = DDSTopic::narrow (td3);
+                  }
+                else
+                  {
+                    ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
+                                "Error casting DataWriter 3 to typed DataWriter 3\n"));
+                    throw ::CORBA::INTERNAL ();
+                  }
               }
             else
               {
-                ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
-                            "Error casting DataWriter 3 to typed DataWriter 3\n"));
+                ACE_ERROR ((LM_ERROR, "ERROR : Receiver_exec_i::ccm_activate - "
+                            "Error getting DDS DataWriter 3.\n"));
                 throw ::CORBA::INTERNAL ();
               }
           }
@@ -224,22 +254,32 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
 
         if (ccm_dw4)
           {
-            DataWriter_type * typed_ccm_dw =
-              dynamic_cast <DataWriter_type *> (ccm_dw4->get_dds_entity ());
-            if (typed_ccm_dw)
+            ::DDS::DataWriter_var tmp = ccm_dw4->get_dds_entity ();
+            if (! ::CORBA::is_nil (tmp.in ()))
               {
-                DDSDataWriter * dds_dw4 = typed_ccm_dw->get_rti_entity ();
-                DDSPublisher * dds_p4 = dds_dw4->get_publisher ();
-                this->dds_dp4_ = dds_p4->get_participant ();
+                DataWriter_type * typed_ccm_dw =
+                  dynamic_cast <DataWriter_type *> (tmp.in ());
+                if (typed_ccm_dw)
+                  {
+                    DDSDataWriter * dds_dw4 = typed_ccm_dw->get_rti_entity ();
+                    DDSPublisher * dds_p4 = dds_dw4->get_publisher ();
+                    this->dds_dp4_ = dds_p4->get_participant ();
 
-                DDSTopicDescription * td4 =
-                  this->dds_dp4_->lookup_topicdescription (tp_name_conn_4_);
-                this->dds_tp4_ = DDSTopic::narrow (td4);
+                    DDSTopicDescription * td4 =
+                      this->dds_dp4_->lookup_topicdescription (tp_name_conn_4_);
+                    this->dds_tp4_ = DDSTopic::narrow (td4);
+                  }
+                else
+                  {
+                    ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
+                                "Error casting DataWriter 4 to typed DataWriter 4\n"));
+                    throw ::CORBA::INTERNAL ();
+                  }
               }
             else
               {
-                ACE_ERROR ((LM_ERROR, "ERROR : Component_exec_i::ccm_activate - "
-                            "Error casting DataWriter 4 to typed DataWriter 4\n"));
+                ACE_ERROR ((LM_ERROR, "ERROR : Receiver_exec_i::ccm_activate - "
+                            "Error getting DDS DataWriter 4.\n"));
                 throw ::CORBA::INTERNAL ();
               }
           }
