@@ -1,3 +1,14 @@
+Wed Dec 22 12:34:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
+          Layout changes
+
+        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.h:
+          Removed unused class variables.
+
+        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
+          Resolved memory leaks.
+
 Wed Dec 22 11:42:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.mpc:
